# bayesian-llm-judge-reliability

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
archive/: README.md
configs/: experiment.yaml  experiment_claude_global.yaml  experiment_claude_source_hier.yaml  experiment_gpt_global.yaml  experiment_gpt_source_hier.yaml  experiment_theta_half.yaml
data/: README.md
data/logs/: deepseek-r1-distill-qwen-14b.config.json  deepseek-r1-distill-qwen-7b.config.json  gemma-2-9b-it.config.json  mistral-7b-instruct-v0-3.config.json  qwen2-5-7b-instruct.config.json
docs/: PROMPT.md  README.md  assumptions.md  limitations.md  profiling.md  structure.md  workflow.md
mk/: common.mk  pipeline.mk  profiling.mk  quality.mk
notebooks/: results.py
profiles/metrics/: full_20260410_010227.json  (+3 more)
scripts/: infer.sh  profile_command.py  recommend_models.sh  run_experiment.sh  setup_models.py  setup_models.sh  verify_models.py  with_cache_env.sh
src/: __init__.py  logging_utils.py  schemas.py  tracking.py
src/analysis/: plots.py  (+9 more)
tests/: __init__.py  test_diagnostics.py  test_irt_blackjax.py  test_irt_common.py  test_irt_numpyro.py  test_irt_pymc.py  test_loader.py  test_logging_utils.py  test_matrix_semantics.py  test_mlx_backend.py  test_parsers.py  test_plots.py  test_posterior_archive.py  test_posterior_queries.py  test_profile_command.py  test_report_exports.py  test_run_tracked_analysis.py  test_runner.py  test_schemas.py  test_setup_models.py  test_tracking.py  test_verify_models.py  vulture_whitelist.py
(+39 files in other folders)
