[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bayesian-llm-judge-reliability"
version = "0.1.0"
description = "Bayesian IRT analysis pipeline for LLM-as-judge reliability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "blackjax>=1.2.5",
  "datasets>=3.2.0",
  "jax>=0.5.0",
  "jaxlib>=0.5.0",
  "llmfit>=0.1.4",
  "marimo>=0.10.17",
  "matplotlib>=3.10.0",
  "mlx-lm>=0.31.1",
  "numpy>=2.2.0",
  "numpyro>=0.16.1",
  "pre-commit>=4.2.0",
  "polars>=1.17.1",
  "pydantic>=2.10.4",
  "py-spy>=0.4.0",
  "pyyaml>=6.0.2",
  "ruff>=0.8.4",
  "vulture>=2.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
